<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_history_settings">History Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_Settings">SettingsActivity</string>
    <string name="pref_lat_key">Latitude</string>
    <string name="pref_lat_label">Latitude</string>
    <string name="pref_lat_default">46.0</string>
    <string name="pref_lon_key">Longitude</string>
    <string name="pref_lon_label">Longitude</string>
    <string name="pref_lon_default">-66.0</string>
    <string name="pref_unit_key">Units</string>
    <string name="pref_unit_label">Units</string>
    <string name="pref_unit_default">1</string>
    <string name="action_view_location">View Location</string>
    <string name="action_share">Share</string>
    <string name="action_show">Show</string>
    <string name="action_history">History</string>
    <string name="pref_start_date_key">StartDate</string>
    <string name="pref_start_date_label">Start Date</string>
    <string name="pref_start_date_default">2014.06.11</string>
    <string name="pref_end_date_key">EndDate</string>
    <string name="pref_end_date_label">End Date</string>
    <string name="pref_end_date_default">2014.07.09</string>
    <string name="pref_time_key">Time</string>
    <string name="pref_time_label">Time</string>
    <string name="pref_time_default">10:00</string>

    <string-array name="pref_unit_options">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="pref_unit_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="title_activity_history">HistoryActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_history_settings">HistorySettingsActivity</string>

</resources>
