<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/pref_lat_key"
        android:title="@string/pref_lat_label"
        android:defaultValue="@string/pref_lat_default"
        android:inputType="numberSigned"
        android:singleLine="true" />

    <EditTextPreference
        android:key="@string/pref_lon_key"
        android:title="@string/pref_lon_label"
        android:defaultValue="@string/pref_lon_default"
        android:inputType="numberSigned"
        android:singleLine="true" />

    <ListPreference
        android:key="@string/pref_unit_key"
        android:title="@string/pref_unit_label"
        android:defaultValue="@string/pref_unit_default"
        android:entries="@array/pref_unit_options"
        android:entryValues="@array/pref_unit_values"
        android:singleLine="true" />

</PreferenceScreen>